--- a/2023/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/2023/AdventOfCode2023/AdventOfCode2023.csproj
@@ -20,6 +20,13 @@
     <None Update="Day1\test_part2.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day2\input">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.10" />
   </ItemGroup>
 
 </Project>
