--- a/2023/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/2023/AdventOfCode2023/AdventOfCode2023.csproj
@@ -32,6 +32,12 @@
     <None Update="Day3\test2.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day4\input">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Day4\test.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
