Day7 adn day5 improvments

--- a/2023/AdventOfCode2023/AdventOfCode2023.csproj
+++ b/2023/AdventOfCode2023/AdventOfCode2023.csproj
@@ -47,6 +47,9 @@
     <None Update="Day6\input">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day7\input">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
